complete object notation